--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/datatables.net": "^1.10.19",
     "@types/jquery": "^3.5.5",
     "@types/vis": "^4.21.21",
+    "axios": "^0.21.1",
     "datatables.net": "^1.10.24",
     "datatables.net-se": "^1.10.24",
     "jquery": "^3.6.0",
