--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vue-toasted": "^1.1.28",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "webpack-env": "^0.8.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
